# ai

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  list_of_tasks_in_polish.md  requirements.txt
03.13/task_report/: ex3.py
04.09/: Sprawozdanie.ipynb  ex2.py  ex3.py  ex4.py  iris2D.csv
board/src/: Board.cc  CMakeLists.txt  Cell.cc
board/tests/: Board_SetCellTest.cc  CMakeLists.txt
cmake/: CompilationFlags.cmake  coverage.cmake  gcc_flags.cmake
hill_climbing_algorithm/: CMakeLists.txt
hill_climbing_algorithm/src/: CMakeLists.txt
hill_climbing_algorithm/tests/: CMakeLists.txt  main.cc
include/knapsack/algorithm/genetic/: Genetic.hh
include/knapsack/algorithm/hill_climbing/: HillClimbing.hh
include/knapsack/algorithm/simulated_annealing/: SimulatedAnnealing.hh
include/knapsack/algorithm/solver/: Parameters.hh  Solver.hh  Timer.hh
include/knapsack/algorithm/tabu_search/: TabuSearch.hh
include/knapsack/item/: Item.hh
include/knapsack/knapsack/: Knapsack.hh
include/knapsack/knapsack/generate/: Generate.hh
include/knapsack/knapsack/item/: Item.hh
include/knapsack/number/: Number.hh
include/knapsack/value/: Decimal.hh
include/shakashaka/: Logger.hh
include/shakashaka/board/: Board.hh  Cell.hh  Coordinate.hh  Neighbour.hh
include/shakashaka/solver/: Solver.hh
mhe/: README.md
mlr/: README.md
mlr/03.13/: ex1.py  ex2.py  miasta.csv
mlr/03.13/task_report/: ex1.md  ex2.md  ex3.py
modules/: CMakeLists.txt
modules/algorithm/: CMakeLists.txt
modules/algorithm/genetic/src/: CMakeLists.txt  Genetic.cc
modules/algorithm/genetic/tests/: CMakeLists.txt  Genetic_solveProblemWithExampleDataSet.cc
modules/algorithm/hill_climbing/src/: CMakeLists.txt  HillClimbing.cc
modules/algorithm/hill_climbing/tests/: CMakeLists.txt  HillClimbing_solveProblemWithExampleDataSet.cc
modules/algorithm/simulated_annealing/src/: CMakeLists.txt  SimulatedAnnealing.cc
modules/algorithm/simulated_annealing/tests/: CMakeLists.txt  SimulatedAnnealing_solveProblemWithExampleDataSet.cc
modules/algorithm/tabu_search/: TabuSearch.hh
modules/algorithm/tabu_search/src/: CMakeLists.txt  TabuSearch.cc
modules/algorithm/tabu_search/tests/: CMakeLists.txt  test.cc
modules/item/src/: CMakeLists.txt  Item.cc
modules/item/tests/: CMakeLists.txt  Item_sortItemsInContainerTest.cc
modules/knapsack/: CMakeLists.txt
modules/knapsack/item/src/: CMakeLists.txt  Item.cc
modules/knapsack/item/tests/: CMakeLists.txt  PrepareItems_prepareDataForSolvedTest.cc
modules/knapsack/src/: CMakeLists.txt  Knapsack.cc
modules/knapsack/tests/: CMakeLists.txt  Knapsack_calculateWeightAndValueItems.cc
modules/main/: CMakeLists.txt  main.cc
shakashaka/: CMakeLists.txt
shakashaka/include/shakashaka/: Logger.hh  Shakashaka.hh
shakashaka/src/: CMakeLists.txt  Shakashaka.cc
shakashaka/tests/: Board_isSolved_tests.cc  Board_tests.cc  CMakeLists.txt
solver/src/: CMakeLists.txt  Solver.cc
solver/tests/: CMakeLists.txt  Solver_PrepareCornerTest.cc
